--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ LANDING PAGE
     position: fixed;
     bottom: 32px;
     right: 40px;
+    z-index: 100;
     box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.2);
 }
 
