--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ Modal
 
 .modal__language{
     width: 25%;
-    padding: 8px;
+    padding: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -773,12 +773,15 @@ Shapes
         margin-bottom: 8px;
     }
     .modal__half{
-        padding: 40px;
+        padding: 30px;
     }
     textarea{
         height: 50px;
     }
     .modal__language--image{
         padding: 4px;
+    }
+    .modal__sub-title{
+        margin: 12px 0;
     }
 }
